[package]
name = "printers"
version = "2.1.0-rc"
authors = ["Tales Luna <tales.ferreira.luna@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["printer", "printing", "print",  "cups", "winspool"]
categories = ["os", "os::windows-apis", "os::linux-apis", "development-tools"]
homepage = "https://crates.io/crates/printers"
repository = "https://github.com/talesluna/rust-printers"
description = "A lib to get printers and print files on unix and windows"
readme = "README.md"

[dependencies]
libc = "0.2"

[lib]
name = "printers"
path = "src/lib.rs"
bench = false
